--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.2",
     "express-session": "^1.17.1",
+    "faker": "^5.5.3",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.0",
     "passport": "^0.4.1",
